[gd_scene load_steps=13 format=4 uid="uid://ka4do5pd7dl"]

[ext_resource type="Texture2D" uid="uid://d0l8xyo4imsat" path="res://Assets/Weapons/rocket_4/rocket_launcher.png" id="1_nowhg"]
[ext_resource type="Script" path="res://Scenes/Weapons/rocket_4/rocket_4_launcher.gd" id="2_eseiu"]
[ext_resource type="AudioStream" uid="uid://c1esysk5x1ksd" path="res://Assets/Sounds/weapons/reload1.wav" id="3_dg3vb"]
[ext_resource type="Shader" path="res://Scenes/Weapons/rocket_4/rocket_4_launcher.gdshader" id="4_e0vpj"]
[ext_resource type="Texture2D" uid="uid://gfy6x0i3n7sn" path="res://Assets/marker_green.png" id="5_cx56q"]
[ext_resource type="Texture2D" uid="uid://k4mycie8tmu4" path="res://Assets/Particles/sparks/spark_1.png" id="6_nbug4"]

[sub_resource type="Animation" id="Animation_b0kxr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 0)]
}

[sub_resource type="Animation" id="Animation_y2xfh"]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(40, 0), Vector2(-40, 0), Vector2(40, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_466ls"]
_data = {
"RESET": SubResource("Animation_b0kxr"),
"shoot": SubResource("Animation_y2xfh")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ttcl1"]
seed = 1
frequency = 0.0061

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cj2xk"]
invert = true
noise = SubResource("FastNoiseLite_ttcl1")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a45iy"]
shader = ExtResource("4_e0vpj")
shader_parameter/flame_start_color = Color(0.8, 0.133333, 0, 1)
shader_parameter/flame_end_color = Color(1, 0.929412, 0.301961, 1)
shader_parameter/speed = 12.0
shader_parameter/flame_dir = 0.0
shader_parameter/flame_size = 0.2
shader_parameter/hardlight_treshold = 0.9
shader_parameter/color_treshold = 0.6
shader_parameter/noise = SubResource("NoiseTexture2D_cj2xk")

[node name="Rocket_4" type="Sprite2D"]
texture = ExtResource("1_nowhg")
offset = Vector2(40, 0)
script = ExtResource("2_eseiu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_466ls")
}

[node name="BulletsSpawn" type="Marker2D" parent="."]
position = Vector2(110, -25)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="snd_reload" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dg3vb")
volume_db = 5.0
pitch_scale = 0.4

[node name="back_flame" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_a45iy")
scale = Vector2(4, 4)
texture = ExtResource("5_cx56q")

[node name="flame_particles" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(-158, -17)
emitting = false
amount = 200
lifetime = 1.5
one_shot = true
speed_scale = 4.0
explosiveness = 0.21
texture = ExtResource("6_nbug4")
emission_shape = 1
emission_sphere_radius = 15.0
direction = Vector2(-1, 0)
spread = 2.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 300.0
angular_velocity_max = 200.0
linear_accel_max = 200.0
scale_amount_min = 0.01
scale_amount_max = 0.5
hue_variation_max = 1.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
